public static class PlayerData
{
    public static readonly string WalkParameterName = "IsWalking";
    public static readonly string RunParameterName = "IsRunning";
    public static readonly string JumpTriggerName = "Jump";
    public static readonly string WalkLeftParameterName = "IsWalkingLeft";
    public static readonly string WalkRightParameterName = "IsWalkingRight";
    public static readonly string WalkBackwardsParameterName = "IsWalkingBack";
    public static readonly string IsGroundParameterName = "IsGrounded";
    public static readonly string DamagedParameterName = "Damaged";
}
